--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.datasource.url=jdbc:postgresql://localhost/25
 spring.datasource.username=postgres
 spring.datasource.password=1
 spring.jpa.generate-ddl=true
+
+spring.freemarker.expose-request-attributes=true
