adding uploads files and logo

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,5 +5,5 @@ spring.jpa.generate-ddl=true
 
 spring.freemarker.expose-request-attributes=true
 
-upload.path=C:/Java/Kobi-s-project/uploads/
+upload.path=/C:/Java/Kobi-s-project/uploads
 #upload.path=C:\\Java\\Kobi-s-project\\src\\main\\resources\\uploads
