--- a/pom.xml
+++ b/pom.xml
@@ -78,12 +78,24 @@
             <artifactId>spring-security-test</artifactId>
             <scope>test</scope>
         </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.thymeleaf.extras</groupId>-->
+<!--            <artifactId>thymeleaf-extras-springsecurity3</artifactId>-->
+<!--        </dependency>-->
+        <dependency>
+            <groupId>org.thymeleaf.extras</groupId>
+            <artifactId>thymeleaf-extras-springsecurity4</artifactId>
+            <version>3.0.2.RELEASE</version>
+        </dependency>
 
     </dependencies>
 
     <properties>
         <java.version>1.8</java.version>
+
     </properties>
+
+
 
 
     <build>
