--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,5 +5,9 @@ spring.jpa.generate-ddl=true
 
 spring.freemarker.expose-request-attributes=true
 
+spring.servlet.multipart.max-file-size=2000000KB
+spring.servlet.multipart.max-request-size=2000000KB
+
 upload.path=/C:/Java/Kobi-s-project/uploads
+#upload.path=Kobi-s-project/uploads
 #upload.path=C:\\Java\\Kobi-s-project\\src\\main\\resources\\uploads
