--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,21 @@
-spring.datasource.url=jdbc:postgresql://localhost/33
+spring.datasource.url=jdbc:postgresql://localhost/base1
 spring.datasource.username=postgres
-spring.datasource.password=1
-spring.jpa.generate-ddl=true
+spring.datasource.password=kobi2021
+spring.jpa.generate-ddl=false
 
-spring.freemarker.expose-request-attributes=true
+spring.jpa.show-sql=false
+spring.jpa.hibernate.ddl-auto=validate
+#spring.jpa.hibernate.ddl-auto=update
+
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 spring.servlet.multipart.max-file-size=2000000KB
 spring.servlet.multipart.max-request-size=2000000KB
 
-upload.path=/C:/Java/Kobi-s-project/uploads
-#upload.path=Kobi-s-project/uploads
+spring.session.jdbc.initialize-schema=always
+spring.session.jdbc.table-name=SPRING_SESSION
+
+upload.path=/root/uploads/
+hostname=116.203.114.62
+#server.port=80#upload.path=Kobi-s-project/uploads
 #upload.path=C:\\Java\\Kobi-s-project\\src\\main\\resources\\uploads
